@@ -450,6 +450,9 @@ Trunk (unreleased changes)
 
     HDFS-774. Intermittent race condition in TestFiPipelines. (cos)
 
+    HDFS-741. TestHFlush test doesn't seek() past previously written part of
+    the file. (cos)
+
 Release 0.20.2 - Unreleased
 
   IMPROVEMENTS
